demo-app/src/app.css
/*FONTS*/
@font-face {
    font-family: 'Anonymous Pro';
    font-style: normal;
    font-weight: 400;
    src: url(fonts/Anonymous_Pro/AnonymousPro-Regular.ttf);
}
/******* APP SPECIFIC STYLES *********/
html, body, p, h1, h2, h3, h4, h5, h6, div, span, ul, li, a, input, textarea, button {
    font-family: 'Anonymous Pro';
}
html,body {
    background-color: #efefef;
}

.airr-navbar {
    background-color: #1f1f1f;
    border-bottom: 1px solid #fff;
}
.airr-navbar .title span,
.airr-navbar .new-title span {
    color: #ccbfa2;
    font-size: 1.2rem;
    font-weight: 700;
}
.airr-navbar .back div {
    background: url(svg/back.svg) no-repeat center center;
    background-size: 69% auto;
    -webkit-transition: -webkit-transform .05s linear;
    -webkit-transition: transform .05s linear;
    transition: transform .05s linear;
}
.airr-navbar .back.clicked div {
    -webkit-transform: scale(.8);
    transform: scale(.8);
}
.airr-navbar .menu div {
    background: url(svg/menu.svg) no-repeat center center;
    background-size: 49% auto;
}
.airr-view {
    background-color: #efefef;
}
p {
    margin-bottom: .5rem;
    font-size: .85rem;
}
.info {
    font-size: .75rem;
}
.airr-mayer .btns button {
    border: 1px solid #000;
    border-radius: 5px;
}
input[type='radio'] {
    -webkit-appearance: radio;
}

h1.menu-title {
    font-size: 2rem;
    margin: 2rem 0 0 0;
}
ul.menu {
    margin: .2rem 0 2rem 0;
    padding: 0;
    list-style-type: none;
}
.wrap {
    padding-top: 2rem;
    padding-bottom: 2rem;
}
.col {
    padding-left: 2rem;
    padding-right: 2rem;
}
ul.menu li {
    font-size: 1.5rem;
    padding: 1rem 2rem;
    margin: 0;
    border-bottom: 1px dashed #ccc;
    text-align: center;
    overflow: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #f8f8f8;
}
ul.menu li .text:first-letter {
    text-transform: capitalize;
}
ul.menu li:active,
ul.menu li.clicked {
    background-color: #fff;
}
ul.menu li span.desc {
    font-size: .7rem;
    display: block;
    width: 66%;
    margin: 0 auto;
    padding: 0 .5rem 0 1rem;
    text-align: right;
}
ul.menu li span.decor {
    font-size: 2.5rem;
    font-weight: 700;
}
button {
    background-color: #000;
    border: 0;
    padding: .4rem 1rem;
    color: #ccbfa2;
    border-radius: 4px;
    box-shadow: 3px 2px 5px 0 rgba(0,0,0,.4);
}
textarea {
    width: 100%;
    border: 0;
    padding: 0.5rem;
    font-size: .8rem;
    margin: 1rem 0;
}
.radio-group .radio {
    display: inline-block;
    width: 2rem;
    height: 2rem;
    background: #fff;
    border-radius: 50%;
    vertical-align: middle;
    margin: .2rem;    
    -webkit-transition: box-shadow .3s ease-in;
    transition: box-shadow .3s ease-in;
    position: relative;
    border: 1px solid #ddd;
}
.radio-flat-group .radio {
    display: block;
    width: 100%;
    border-radius: 0;
    height: 1.5rem;    
    padding: .5rem 0;
    margin: 0;
    text-align: center;
    -webkit-transition: box-shadow .3s ease-in;
    transition: box-shadow .3s ease-in;
    background: #fff;
    border: 1px solid #ddd;
}
.radio-group .radio.checked {
    box-shadow: inset 0 0 10px 4px rgba(0,0,0,.4);
    border: 0;
}
.radio-flat-group .radio.checked {
    box-shadow: inset 0 0 10px 4px rgba(0,0,0,.4);
    border: 0;
}
.radio-group .radio span {
    display: block;
    width: 0;
    height: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translateY(-50%) translateX(-50%);
    transform: translateY(-50%) translateX(-50%);;
    background-color: transparent;
    border-radius: 50%;
    -webkit-transition: background-color .3s ease-in, width .3s ease-in, height .3s ease-in;
    transition: background-color .3s ease-in, width .3s ease-in, height .3s ease-in;
}
.radio-flat-group .radio span {
    display: block;
    width: 0;
    height: 100%;
    margin: 0 auto;
    -webkit-transition: background-color .3s ease-in, width .3s ease-in, height .3s ease-in;
    transition: background-color .3s ease-in, width .3s ease-in, height .3s ease-in;
}
.radio-group .radio.checked span {
    display: block;
    width: 1rem;
    height: 1rem;
    background-color: rgba(0,0,0,.6);
}
.radio-flat-group .radio.checked span {
    width: 66%;
    background-color: rgba(0,0,0,.6);
}
.radio-group label,
.radio-flat-group label {
    font-size: .65rem;
    left: 10px;
    text-align: center;
    display: block;
    font-weight: 600;
}
.header {
    font-size: .9rem;
    text-align: center;
    font-weight: 600;
    margin-bottom: .5rem;
}
.row {
    overflow: auto;
}
.col-6 {
    width: 50%;
    float: left;
}
.col-3 {
    width: 25%;
    float: left;
}
.col-4 {
    width: 33.33333%;
    float: left;
}
.mayers-view .anim-ctn {
    overflow: auto;
    border-top: 1px solid #ddd;
    padding-top: .5rem;
}
.mayers-view .anim-ctn .col-6:last-child .radio-group > div {
    border-left: 1px solid #ddd;
}
.mayers-view .btn-ctn {
    text-align: center;
    margin: .5rem 0;
}
.text-center {
    text-align: center;
}
.mayers-view .radio-group .col-6 {
    text-align: center;
}
.brd-r {
    border-right: 1px solid #ddd;
    padding-right: .5rem;
}
.brd-l {
    border-left: 1px solid #ddd;
    padding-left: .5rem;
}
.brd-t {
    border-top: 1px solid #ddd;
    padding-top: .5rem;
}
.brd-b {
    border-bottom: 1px solid #ddd;
    padding-bottom: .5rem;
}
.sidepanel-view .radio-group {
    margin-bottom: 2rem;
}
.sidepanel-view .radio-group .col-3 {
    text-align: center;
}
.sidepanel-view .radio-flat-group .radio.checked.onethird span {
    width: 33.33333%;
}
.sidepanel-view .radio-flat-group .radio.checked.twothird span {
    width: 66.66666%;
}
.sidepanel-view .radio-flat-group .radio.checked.full span {
    width: 100%;
}
.airr-sidepanel > div:last-child {
    background-color: rgba(31, 31, 31, 0.9);
    color: #ccbfa2;
}
.airr-sidepanel.left > div:last-child {
    border-right: 1px solid #ccbfa2;
}
.airr-sidepanel.right > div:last-child {
    border-left: 1px solid #ccbfa2;
}
.airr-sidepanel.top > div:last-child {
    border-bottom: 1px solid #ccbfa2;
}
.airr-sidepanel.bottom > div:last-child {
    border-top: 1px solid #ccbfa2;
}
.airr-sidepanel .brd-b,
.airr-sidepanel .brd-t,
.airr-sidepanel .brd-l,
.airr-sidepanel .brd-r {
    border-color: #ccbfa2;
}
.airr-sidepanel .col {
    padding-left: 1rem;
    padding-right: 1rem;
}
.airr-sidepanel .intro {
    margin-top: 3rem;
    font-size: 1.2rem;
    text-align: center;
    font-weight: 600;
}
.airr-sidepanel .intro span.info {
    font-size: .8rem;
    text-align: center;
    font-weight: 400;
    display: block;
}
.airr-sidepanel .description {
    margin-top: 1rem;
    font-size: .9rem;
    text-align: center;
}
.airr-sidepanel .header {
    font-size: 1rem;
}
.airr-sidepanel.top .wrap,
.airr-sidepanel.bottom .wrap {
    display: flex;
    justify-content: start;    
    align-items: center;
    height: 100%;
    overflow-y: hidden;
    overflow-x: scroll;
    width: 100%;
}
.airr-sidepanel.top .wrap > div:nth-child(1),
.airr-sidepanel.bottom .wrap > div:nth-child(1) {
    flex: 0 0 45%;
}
.airr-sidepanel.top .wrap > div:nth-child(2),
.airr-sidepanel.bottom .wrap > div:nth-child(2) {
    flex: 0 0 45%;
}
.airr-sidepanel.top .wrap > div:nth-child(3),
.airr-sidepanel.bottom .wrap > div:nth-child(3) {
    flex: 0 0 100%;
}
.airr-sidepanel.top .wrap .header,
.airr-sidepanel.bottom .wrap .header,
.airr-sidepanel.top .wrap .intro,
.airr-sidepanel.bottom .wrap .intro,
.airr-sidepanel.top .wrap .description,
.airr-sidepanel.bottom .wrap .description {
    margin-top: 0;
    text-align: left;
    margin-right: 10px;
}
.airr-sidepanel.top .wrap .intro,
.airr-sidepanel.bottom .wrap .intro,
.airr-sidepanel.top .wrap span.info,
.airr-sidepanel.bottom .wrap span.info {
    text-align: center;
}



.scene-view.wrap {
    padding-bottom: 0;
}


.info-icon {
    width: 2rem;
    height: 2rem;
    display: inline-block;
    background: url(svg/info.svg) no-repeat center center;
    background-size: 100%;    
    vertical-align: middle;
}
.info-icon.sm {
    width: 1rem;
    height: 1rem;
}
.info-icon.md {
    width: 1.5rem;
    height: 1.5rem;
}

.second-menu h1.menu-title {
    font-size: 1.3rem;
    margin-top: 1rem;
}
.second-menu ul.menu li {
    font-size: 1rem;
}

.scene-slide .view-number {
    margin: 1rem auto;
    width: 25%;
    border: 2px solid #1f1f1f;
    border-radius: 50%;
    padding-bottom: 25%;
    position: relative;
    background-color: #1f1f1f;
    box-shadow: inset 0 0 0 2px #ccbfa2;
    
}
.scene-slide .view-number span {
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    left: 0;
    right: 0;
    text-align: center;
    color: #ccbfa2;
    font-size: 2rem;
}

.scene-slide .nav {
    overflow: auto;
    padding: 1rem 0;
}
.scene-slide .radio-group .row > div {
    text-align: center;
}
.scene-slide .next {
    float: right;
}
.scene-slide .prev{
    float: left;
}
.scene-slide .view-anim-header {
    margin-top: 2rem;
}
.tabs-view.wrap {
    padding-bottom: 0;
}

